[fix] tag overflow

--- a/app/src/components/Work.css
+++ b/app/src/components/Work.css
@@ -96,6 +96,7 @@
     text-align: left;
     color: var(--highlight-color);
     display: flex;
+    flex-wrap: wrap;
 }
 
 .timeline ul li .timeline-card .timeline-text .technology_stack .techstack_tag{
